--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -176,15 +176,15 @@ body, html {
         position: fixed;
         bottom: 20px;
         right: 20px;
-        background-color: #125ba8; /* Optional: button background color */
+        background-color: #125ba8;
         padding: 10px;
         border-radius: 50%; /* Makes the button circular */
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        z-index: 1001; /* Ensure it floats above other content */
+        z-index: 1001;
     }
 
     .login-btn img {
-        height: 40px;  /* Adjust login button size for smaller screens */
+        height: 40px; 
         width: 40px;   /* Maintain square aspect ratio */
         content: url('../assets/login-mobile.png');
     }
