--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -109,6 +109,16 @@ body, html {
     
 }
 
+.nyanCat {
+    height: 100%;
+    display:flex;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .con {
