--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,3 @@
-
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
-
 html, body {
     position: relative;
     min-height: 100vh;
@@ -11,8 +8,8 @@ html, body {
     align-items: center;
     justify-content: center;
     font-family: "Fira Sans", Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    /* -webkit-font-smoothing: antialiased; */
+    /* -moz-osx-font-smoothing: grayscale; */
     overflow: hidden;
   }
   
