--- a/css/personal.css
+++ b/css/personal.css
@@ -1,7 +1,7 @@
 /* Body and General Styles */
 body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #bdc5d3;
     color: #333;
     margin: 0;
     padding: 0;
