--- a/css/chapters.css
+++ b/css/chapters.css
@@ -99,6 +99,65 @@ p {
     background-color: #7be1c4;
 }
 
+#question {
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.choices-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.choice {
+    background-color: #f0f0f0;
+    padding: 15px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.choice:hover {
+    background-color: #e0e0e0;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 40px 40px 20px; /* Adjusted padding at the bottom to avoid empty space */
+    max-width: 800px;
+    min-height: 400px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.popup-image {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it appears above other content */
+    width: 200px; /* Adjust the size as needed */
+    height: auto;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
+}
+
+.popup-image.show {
+    display: block;
+    opacity: 1;
+}
+
+
 @media (max-width: 768px) {
     .content {
         padding: 20px;
