--- a/css/chapters.css
+++ b/css/chapters.css
@@ -131,7 +131,7 @@ p {
     justify-content: space-between;
     flex-direction: column;
     margin: 0 auto;
-    padding: 40px 40px 20px; /* Adjusted padding at the bottom to avoid empty space */
+    padding: 40px 40px 20px;
     max-width: 800px;
     min-height: 400px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -140,13 +140,13 @@ p {
 }
 
 .popup-image {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000; /* Ensure it appears above other content */
-    width: 200px; /* Adjust the size as needed */
+    z-index: 1000;
+    width: 200px;
     height: auto;
     transition: opacity 0.5s ease-in-out;
     opacity: 0;
@@ -155,6 +155,47 @@ p {
 .popup-image.show {
     display: block;
     opacity: 1;
+}
+
+.code {
+    background-color: #2d2d2d;
+    color: #f8f8f2;
+    padding: 15px;
+    border-radius: 8px;
+    font-family: 'Courier New', Courier, monospace;
+    overflow-x: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.code p {
+    margin: 0;
+    line-height: 1.5;
+}
+
+.code .keyword {
+    color: #66d9ef;
+}
+
+.code .tag {
+    color: #b92895;
+}
+
+.code .string {
+    color: #a6e22e;
+}
+
+.code .comment {
+    color: #75715e;
+}
+
+.code .function {
+    color: #fd971f;
+}
+
+li {
+    font-size: 20px;
+    margin-bottom: 8px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 
