--- a/css/chapters.css
+++ b/css/chapters.css
@@ -83,6 +83,16 @@ h1#title {
     height: 25%;
 }
 
+.codeimg {
+    display: flex;
+    justify-content: center;
+}
+
+.codeimg img {
+    width: 45%;
+    height: 30%;
+}
+
 p {
     font-size: 20px;
 }
@@ -165,6 +175,7 @@ p {
     font-family: 'Courier New', Courier, monospace;
     overflow-x: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 30px;
 }
 
 .code p {
