--- a/css/chapters.css
+++ b/css/chapters.css
@@ -209,6 +209,29 @@ li {
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.progress-bar {
+    width: 50%;
+    height: 10px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    margin: 0 20px;
+    position: relative;
+}
+
+.progress {
+    height: 100%;
+    background-color: #67d0ba;
+    width: 0%;
+    border-radius: 5px;
+    transition: width 0.3s ease;
+}
+
 
 @media (max-width: 768px) {
     .content {
