--- a/css/chapters.css
+++ b/css/chapters.css
@@ -113,6 +113,10 @@ p {
     font-size: 20px;
 }
 
+i {
+    color:darkmagenta;
+}
+
 .logo {
     position: absolute;
     top: 0;
@@ -359,7 +363,44 @@ a {
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
-
+.sortable-list {
+    width: 425px;
+    padding: 25px;
+    background: #fff;
+    border-radius: 7px;
+    padding: 30px 25px 20px;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  }
+  .sortable-list .item {
+    list-style: none;
+    display: flex;
+    cursor: move;
+    background: #fff;
+    align-items: center;
+    border-radius: 5px;
+    padding: 10px 13px;
+    margin-bottom: 11px;
+    /* box-shadow: 0 2px 4px rgba(0,0,0,0.06); */
+    border: 1px solid #ccc;
+    justify-content: space-between;
+  }
+  .item .details {
+    display: flex;
+    align-items: center;
+  }
+  .item .details span {
+    font-size: 1.13rem;
+  }
+  .item i {
+    color: #474747;
+    font-size: 1.13rem;
+  }
+  .item.dragging {
+    opacity: 0.6;
+  }
+  .item.dragging :where(.details, i) {
+    opacity: 0;
+  }  
 
 @media (max-width: 768px) {
     .content {
