--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -12,13 +12,37 @@ body, html {
 
 /* Navbar */
 .navbar {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    /* row-gap: 10px; */
+    position: relative;
     background-color: #4a90e2;
     color: #fff;
     padding: 15px 20px;
     text-align: center;
 }
 
-.logo h1 {
+.logo {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.logo img {
+    width: 10vh; /* Adjust size as needed */
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+.logo:hover img {
+    transform: scale(1.1);
+}
+
+.title h1 {
     margin: 0;
     font-size: 28px;
     font-weight: 600;
