--- a/css/chapters.css
+++ b/css/chapters.css
@@ -276,6 +276,7 @@ i {
     overflow-x: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 30px;
+    text-align:left;
 }
 
 .code p {
