--- a/css/learn.css
+++ b/css/learn.css
@@ -24,12 +24,17 @@ body {
     margin-right: 20px;
 }
 
+section {
+    background-image: url('../assets/newspaper.png');
+    background-size: cover;
+}
+
 .column-right {
     flex: 1;
 }
 
 .dude {
-
+    
 }
 
 /* Big Card Styling */
@@ -98,4 +103,23 @@ body {
 
 .card-big:hover {
     animation: hoverAnim 0.3s forwards ease-in-out;
+}
+
+
+#blog-logo  {
+    display: inline-block;
+    transition: transform 0.6s ease-in-out;
+}
+
+#blog-logo:hover {
+    animation: shakeRotate 0.6s cubic-bezier(.36,.07,.19,.97) both;
+}
+
+@keyframes shakeRotate {
+    0% { transform: translate(0, 0) rotate(0deg); }
+    10%, 90% { transform: translate(-2px, 0) rotate(-2deg); }
+    20%, 80% { transform: translate(4px, 0) rotate(2deg); }
+    30%, 50%, 70% { transform: translate(-8px, 0) rotate(-4deg); }
+    40%, 60% { transform: translate(8px, 0) rotate(4deg); }
+    100% { transform: translate(0, 0) rotate(0deg); }
 }
