--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -23,22 +23,23 @@ body, html {
     text-align: center;
 }
 
-.logo {
+#backBtn {
     position: absolute;
     top: 20px;
-    left: 0;
+    left: 20px;
     display: flex;
     align-items: center;
     text-decoration: none;
 }
 
-.logo img {
-    width: 10vh; /* Adjust size as needed */
+#backBtn img {
+    width: 12vh; /* Adjust size as needed */
     height: auto;
     transition: transform 0.3s ease;
+    cursor: pointer;
 }
 
-.logo:hover img {
+#backBtn:hover img {
     transform: scale(1.1);
 }
 
